	Backported from mainline 	2016-09-27  Jakub Jelinek  <jakub@redhat.com>

PR fortran/77666
	* trans-openmp.c (gfc_omp_private_outer_ref): Return true even for
	references to allocatable arrays.

	* gfortran.dg/gomp/pr77666.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@243388 138bc75d-0d04-0410-961f-82ee72b054a4